# ENPM_808X_FINAL

./: CMakeLists.txt  Doxyfile  README.md  package.xml  readme.md
.github/workflows/: build_and_coveralls.yml  my_codecov_upload.yml  test_docker.yml
ENPM_808X_FINAL/: CMakeLists.txt  compile_commands.json  package.xml  readme.md
ENPM_808X_FINAL/.cache/clangd/index/: controller_test.cpp.18758C6CB6293520.idx  pid.hpp.191C4281CBF00097.idx  tb3controller.cpp.ACEC62CE828D112A.idx  tb3controller.hpp.A733BD5E5367124E.idx  test.cpp.1DFAD9B13B4BCF69.idx  turtlebot_sim.cpp.531EB9710A4A1A0B.idx  turtlebot_sim.hpp.E1ABE6EBD8F07797.idx
ENPM_808X_FINAL/include/tb3/: pid.hpp  tb3controller.hpp  tb3controller_bak.hpp  turtlebot_sim.hpp
ENPM_808X_FINAL/launch/: demo_launch.py  gazebo.launch.py  load_world_into_gazebo.launch.py
ENPM_808X_FINAL/src/: pid.cpp  tb3controller.cpp  tb3controller_bak.cpp  turtlebot_sim.cpp  waypoint.cpp
ENPM_808X_FINAL/test/: Perception_Test.cpp  aruco_test.cpp  controller_test.cpp  main.cpp  test.cpp  testtest.cpp
ENPM_808X_FINAL/worlds/: cafe_2.world  custom_world_1.world  custom_world_2_b.world  custom_world_2_bak.world  custom_world_3_bak.world  final_world.world  final_world_2.world  final_world_3.world
Results/: cppcheck.txt  cpplint.txt
docs/html/: ____init_____8py_source.html  _perception___test_8cpp_source.html  annotated.html  annotated_dup.js  aruco__generate__marker_8py_source.html  aruco__node_8py_source.html  aruco__test_8cpp.html  aruco__test_8cpp.js  aruco__test_8cpp__incl.map  aruco__test_8cpp__incl.md5  aruco__test_8cpp_source.html  class_minimal_subscriber-members.html  class_minimal_subscriber.html  class_minimal_subscriber.js  class_task_controller-members.html  class_task_controller.html  class_task_controller.js  class_task_controller__coll__graph.map  class_task_controller__inherit__graph.md5  class_task_perception-members.html  class_task_perception.html  class_task_perception.js  class_task_perception__inherit__graph.map  class_task_perception__inherit__graph.md5  class_test__aruco-members.html  class_test__aruco.html  class_test__aruco.js  class_test__aruco__inherit__graph.map  class_test__aruco__inherit__graph.md5  classes.html  classros2__aruco_1_1aruco__generate__marker_1_1_custom_formatter.html  classros2__aruco_1_1aruco__generate__marker_1_1_custom_formatter__inherit__graph.map  classros2__aruco_1_1aruco__generate__marker_1_1_custom_formatter__inherit__graph.md5  classros2__aruco_1_1aruco__node_1_1_aruco_node-members.html  classros2__aruco_1_1aruco__node_1_1_aruco_node.html  classros2__aruco_1_1aruco__node_1_1_aruco_node.js  classros2__aruco_1_1aruco__node_1_1_aruco_node__coll__graph.map  classros2__aruco_1_1aruco__node_1_1_aruco_node__coll__graph.md5  classros2__aruco_1_1transformations_1_1_arcball-members.html  classros2__aruco_1_1transformations_1_1_arcball.html  (+91 more)
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  files_0.js  files_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  namespaces_0.js  pages_0.js  searchdata.js
install/: local_setup.sh  setup.sh
install/ros2_aruco/share/ros2_aruco/: package.sh
install/tb3/include/tb3/tb3/msg/: data.h  rosidl_typesupport_fastrtps_cpp__visibility_control.h
install/tb3/include/tb3/tb3/msg/detail/: data__rosidl_typesupport_fastrtps_cpp.hpp  data__rosidl_typesupport_introspection_c.h  data__rosidl_typesupport_introspection_cpp.hpp  data__struct.hpp  data__type_support.c  data__type_support.cpp  data__type_support.h
install/tb3/include/tb3/tb3/srv/: change_string.h
install/tb3/include/tb3/tb3/srv/detail/: change_string__rosidl_typesupport_fastrtps_c.h  change_string__rosidl_typesupport_fastrtps_cpp.hpp  change_string__rosidl_typesupport_introspection_c.h  (+4 more)
install/tb3/share/ament_index/resource_index/package_run_dependencies/: tb3
install/tb3/share/ament_index/resource_index/parent_prefix_path/: tb3
install/tb3/share/tb3/: local_setup.dsv  local_setup.sh  package.dsv  package.ps1  package.sh
install/tb3/share/tb3/cmake/: ament_cmake_export_dependencies-extras.cmake  export_tb3__rosidl_generator_cExport-debug.cmake  export_tb3__rosidl_generator_cExport-noconfig.cmake  export_tb3__rosidl_generator_cExport.cmake  export_tb3__rosidl_generator_pyExport-debug.cmake  export_tb3__rosidl_generator_pyExport-noconfig.cmake  export_tb3__rosidl_generator_pyExport.cmake  export_tb3__rosidl_typesupport_fastrtps_cExport-debug.cmake  export_tb3__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_tb3__rosidl_typesupport_fastrtps_cExport.cmake  export_tb3__rosidl_typesupport_fastrtps_cppExport-debug.cmake  export_tb3__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake  tb3__rosidl_typesupport_cExport-noconfig.cmake  tb3__rosidl_typesupport_cExport.cmake  tb3__rosidl_typesupport_cppExport-noconfig.cmake  tb3__rosidl_typesupport_introspection_cExport-noconfig.cmake  tb3__rosidl_typesupport_introspection_cppExport-noconfig.cmake  tb3__rosidl_typesupport_introspection_cppExport.cmake
install/tb3/share/tb3/msg/: Data.idl
install/tb3/share/tb3/srv/: ChangeString_Response.msg
install/tb3/share/tb3/worlds/: custom_world_5_bak.world  final_world_1.world
install/tutorial_interfaces/share/tutorial_interfaces/: local_setup.sh  package.sh
install/tutorial_interfaces/share/tutorial_interfaces/cmake/: ament_cmake_export_dependencies-extras.cmake  export_tutorial_interfaces__rosidl_generator_cExport.cmake  tutorial_interfaces__rosidl_typesupport_cExport.cmake  tutorial_interfaces__rosidl_typesupport_introspection_cExport.cmake  tutorial_interfaces__rosidl_typesupport_introspection_cppExport.cmake
log/: latest_build  latest_test
ros2_aruco/ros2_aruco/: aruco_node.py
src/Planning/include/: pid.hpp
src/Planning/src/: pid.cpp
test/: main.cpp  test.cpp
tutorial_interfaces/: CMakeLists.txt  package.xml
(+16 files in other folders)
